--- a/hanRiver/sklearn_ver.ipynb
+++ b/hanRiver/sklearn_ver.ipynb
@@ -231,7 +231,9 @@
    "execution_count": 62,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# train_data.drop(['swl', 'sfw', 'ecpc', 'tide_level'],axis=1,inplace=True)"
+   ]
   },
   {
    "cell_type": "code",
