--- a/hanRiver/lstm.ipynb
+++ b/hanRiver/lstm.ipynb
@@ -79,7 +79,7 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 1841205844798083259\n",
+      "incarnation: 3208498525108555634\n",
       "xla_global_id: -1\n",
       ", name: \"/device:GPU:0\"\n",
       "device_type: \"GPU\"\n",
@@ -89,7 +89,7 @@
       "  links {\n",
       "  }\n",
       "}\n",
-      "incarnation: 10422946760745115205\n",
+      "incarnation: 17878620507494976557\n",
       "physical_device_desc: \"device: 0, name: NVIDIA GeForce RTX 3050 Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.6\"\n",
       "xla_global_id: 416903419\n",
       "]\n",
@@ -323,16 +323,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 26064/26064 [00:22<00:00, 1174.84it/s]\n",
-      "100%|██████████| 26064/26064 [00:20<00:00, 1295.16it/s]\n",
-      "100%|██████████| 26064/26064 [00:20<00:00, 1266.65it/s]\n",
-      "100%|██████████| 26064/26064 [00:23<00:00, 1114.17it/s]\n",
-      "100%|██████████| 26064/26064 [00:23<00:00, 1110.09it/s]\n",
-      "100%|██████████| 26064/26064 [00:24<00:00, 1071.29it/s]\n",
-      "100%|██████████| 26064/26064 [00:24<00:00, 1048.49it/s]\n",
-      "100%|██████████| 26064/26064 [00:25<00:00, 1023.22it/s]\n",
-      "100%|██████████| 26064/26064 [00:26<00:00, 989.29it/s] \n",
-      "100%|██████████| 26064/26064 [00:27<00:00, 940.98it/s] \n"
+      "100%|██████████| 26064/26064 [00:21<00:00, 1207.80it/s]\n",
+      "100%|██████████| 26064/26064 [00:22<00:00, 1137.88it/s]\n",
+      "100%|██████████| 26064/26064 [00:24<00:00, 1071.65it/s]\n",
+      "100%|██████████| 26064/26064 [00:23<00:00, 1108.78it/s]\n",
+      "100%|██████████| 26064/26064 [00:24<00:00, 1078.39it/s]\n",
+      "100%|██████████| 26064/26064 [00:23<00:00, 1113.84it/s]\n",
+      "100%|██████████| 26064/26064 [00:22<00:00, 1144.11it/s]\n",
+      "100%|██████████| 26064/26064 [00:23<00:00, 1116.76it/s]\n",
+      "100%|██████████| 26064/26064 [00:24<00:00, 1066.78it/s]\n",
+      "100%|██████████| 26064/26064 [00:26<00:00, 992.44it/s] \n"
      ]
     }
    ],
@@ -384,22 +384,78 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Layer lstm will not use cuDNN kernels since it doesn't meet the criteria. It will use a generic GPU kernel as fallback when running on GPU.\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\dacon\\hanRiver\\lstm.ipynb 셀 10\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/dacon/hanRiver/lstm.ipynb#X12sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m model\u001b[39m.\u001b[39madd(LSTM(\u001b[39m10\u001b[39m,return_sequences\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m,activation\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mrelu\u001b[39m\u001b[39m'\u001b[39m))   \u001b[39m#                             # 두번째, 세번째 줄은 주석처리해서 1개만 사용해보세요.\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/dacon/hanRiver/lstm.ipynb#X12sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m#model.add(GRU(10,return_sequences=False,activation='relu'))  #  \u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/dacon/hanRiver/lstm.ipynb#X12sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m model\u001b[39m.\u001b[39madd(Dense(\u001b[39m50\u001b[39m,input_dim\u001b[39m=\u001b[39m x\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m]))                                                  \u001b[39m# DNN방식적용시 위의 RNN주석 걸고 위의 1-4에서 두번째 옵션 선택합니다.                \u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/dacon/hanRiver/lstm.ipynb#X12sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m model\u001b[39m.\u001b[39madd(Dense(\u001b[39m50\u001b[39m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/dacon/hanRiver/lstm.ipynb#X12sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m model\u001b[39m.\u001b[39madd(Dense(\u001b[39m30\u001b[39m))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'x' is not defined"
+     ]
+    }
+   ],
    "source": [
     "input_shape = (train_data[0].shape[0], train_data[0].shape[1])\n",
     "\n",
     "model = Sequential()\n",
-    "model.add(GRU(256, input_shape=input_shape))\n",
-    "model.add(Dense(4, activation = 'relu'))\n",
+    "#model.add(SimpleRNN(10,input_shape=(x.shape[1],x.shape[2])   ,return_sequences=True))       # 공백안에 ,activation='relu'도 사용해보세요.\n",
+    "model.add(LSTM(10,return_sequences=True,activation='relu'))   #                             # 두번째, 세번째 줄은 주석처리해서 1개만 사용해보세요.\n",
+    "#model.add(GRU(10,return_sequences=False,activation='relu'))  #  \n",
+    "model.add(Dense(50,input_dim= train_data.shape[1]))                                                  # DNN방식적용시 위의 RNN주석 걸고 위의 1-4에서 두번째 옵션 선택합니다.                \n",
+    "model.add(Dense(50))\n",
+    "model.add(Dense(30))\n",
+    "model.add(Dense(15,activation=\"relu\")) #\n",
+    "model.add(Dense(8,activation=\"relu\")) #\n",
+    "model.add(Dense(5))\n",
+    "model.add(Dense(1,activation = 'linear')) \n",
     "\n",
     "optimizer = tf.optimizers.RMSprop(0.001)\n",
     "\n",
-    "model.compile(optimizer=optimizer,loss='mse', metrics=['mae'])"
+    "model.compile(optimizer=optimizer,loss='rmse', metrics=['mae'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train,x_val,y_train,y_val = train_test_split(train_data, train_label, shuffle=False, train_size=0.7, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import r2_score\n",
+    "# model = grid_cv.best_estimator_\n",
+    "model.fit(x_train, y_train, epochs=10, batch_size=512)\n",
+    "y_pred = model.predict(x_val)\n",
+    "# print(y_val)\n",
+    "# print(y_pred)\n",
+    "print(r2_score(y_val, y_pred))\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "RMSE = mean_squared_error(y_val, y_pred)**0.5\n",
+    "print(RMSE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +473,7 @@
     }
    ],
    "source": [
-    "model.fit(train_data, train_label, epochs=10, batch_size=512)"
+    "# model.fit(train_data, train_label, epochs=10, batch_size=512)"
    ]
   },
   {
