--- a/prodTaken/predict.ipynb
+++ b/prodTaken/predict.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 91,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -431,21 +431,21 @@
        "[1955 rows x 20 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ob_col = ['TypeofContact', 'Occupation',\n",
-    "          'Gender', 'ProductPitched', 'MaritalStatus', 'Designation']\n",
+    "            'Gender', 'ProductPitched', 'MaritalStatus', 'Designation']\n",
     "train.replace('Fe Male', 'Female')\n",
     "# ic(train['Gender'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 94,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 95,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -497,15 +497,22 @@
    },
    "outputs": [],
    "source": [
-    "model = RandomForestClassifier()\n",
-    "\n",
     "train = train.drop(columns=drop_col)\n",
     "test = test.drop(columns=drop_col)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ic(train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -529,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 97,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -547,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 98,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -572,7 +579,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 99,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -628,7 +635,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(train)\n",
+    "# print(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -639,21 +656,20 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.preprocessing import RobustScaler\n",
     "scaler = RobustScaler()\n",
+    "scaler.fit(train[['Age', 'DurationOfPitch', 'PreferredPropertyStar']])\n",
     "\n",
-    "scaler.fit(train[['Age', 'DurationOfPitch']])\n",
+    "# train[['Age', 'DurationOfPitch']] = scaler.transform(train[['Age', 'DurationOfPitch']])\n",
+    "# test[['Age', 'DurationOfPitch']] = scaler.transform(test[['Age', 'DurationOfPitch']])\n",
     "\n",
-    "# train[['Age', 'DurationOfPitch', 'MonthlyIncome']] = scaler.transform(train[['Age', 'DurationOfPitch', 'MonthlyIncome']])\n",
-    "# test[['Age', 'DurationOfPitch', 'MonthlyIncome']] = scaler.transform(test[['Age', 'DurationOfPitch', 'MonthlyIncome']])\n",
-    "\n",
-    "train[['Age', 'DurationOfPitch']] = scaler.transform(train[['Age', 'DurationOfPitch']])\n",
-    "test[['Age', 'DurationOfPitch']] = scaler.transform(test[['Age', 'DurationOfPitch']])\n",
+    "train[['Age', 'DurationOfPitch', 'PreferredPropertyStar']] = scaler.transform(train[['Age', 'DurationOfPitch', 'PreferredPropertyStar']])\n",
+    "test[['Age', 'DurationOfPitch', 'PreferredPropertyStar']] = scaler.transform(test[['Age', 'DurationOfPitch', 'PreferredPropertyStar']])\n",
     "# ic(train)\n",
     "# test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 102,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -670,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 103,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -679,12 +695,12 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "x_train,x_val,y_train,y_val = train_test_split(x, y, train_size=0.8, shuffle=False, random_state=42)\n"
+    "x_train,x_val,y_train,y_val = train_test_split(x, y, train_size=0.8, shuffle=True, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 104,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -695,13 +711,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "정확도 : 0.928388746803069\n",
-      "0.928388746803069\n",
+      "정확도 : 0.8823529411764706\n",
+      "0.8823529411764706\n",
       "1.0\n"
      ]
     }
    ],
    "source": [
+    "# from sklearn.svm import SVC\n",
+    "\n",
+    "model = RandomForestClassifier()\n",
+    "\n",
     "model.fit(x_train,y_train)\n",
     "val_predict = model.predict(x_val) \n",
     "from sklearn import metrics \n",
@@ -712,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 105,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -730,7 +750,7 @@
     "\n",
     "# sample_submission['ProdTaken'] = pred\n",
     "# ic(sample_submission.head())\n",
-    "# sample_submission.to_csv('submission/submission_scaler2.csv',index = False)\n"
+    "# sample_submission.to_csv('submission/submission_sc3.csv',index = False)"
    ]
   }
  ],
