--- a/prodTaken/predict.ipynb
+++ b/prodTaken/predict.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 111,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 112,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 113,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 114,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -431,7 +431,7 @@
        "[1955 rows x 20 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 115,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 116,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 117,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
        "[1955 rows x 13 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 123,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 124,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 125,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1080,7 +1080,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 126,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 128,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 129,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 130,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 131,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1219,7 +1219,7 @@
    "source": [
     "# from sklearn.svm import SVC\n",
     "\n",
-    "model = RandomForestClassifier()\n",
+    "model = RandomForestClassifier(n_estimators=250, max_depth=15, random_state=42)\n",
     "\n",
     "model.fit(x_train,y_train)\n",
     "val_predict = model.predict(x_val) \n",
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 132,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
